feat(multitenancy): implement core multi-tenant architecture (PHASE 1-3)
- Migrations V135/V136: tenant_memberships with scope_type/scope_id/role_id, roles, permissions, org_nodes, saas_plans, subscriptions, invitations, audit_logs
- 40+ atomic permissions + system role mappings
- TenantMembership entity: Role FK, MembershipScopeType (TENANT/REGION/CHURCH/SUB_CHURCH/CAMPUS/DEPARTMENT/FAMILY/ASSIGNED/OWN), scopeId
- AuthorizationService: centralized can()/canView()/canCreate()/canUpdate()/canDelete() with scope hierarchy
- TenantContext: removed DEFAULT_TENANT_ID fallback, added getCurrentUserId()
- TenantFilterIntegrator: enforces explicit tenant context (throws if absent)
- CurrentTenantResolver: no fallback, returns null for multi-tenant selection
- ComplianceManagerService/DataInitializer: iterate tenants instead of DEFAULT_TENANT_ID
- TenantSwitcherController: /context, /my-tenants, /switch, /switch-org, /refresh
- InvitationController: full workflow (create, validate, accept, cancel, resend)
- Frontend TenantContext: subscription, quotas, features, branding, canAccess(), isQuotaExceeded()
- Mobile TenantSession: Subscription, Quotas, Plan, Features, Branding, OrgNode, AccessibleNodes
- MultiTenantSecurityTests: 18 tests (tenant/role/scope/resource isolation, escalation prevention)
- Authz infrastructure: @Authz annotation, AuthzAspect, AuthorizationExpressionRoot for @PreAuthorize(@authz.can(...))